--- a/package.json
+++ b/package.json
@@ -4,12 +4,25 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "nodemon src/index.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "pg": "^8.6.0"
-    }
+        "express": "^4.17.1",
+        "pg": "^8.6.0",
+        "pgtools": "^0.3.2"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.12"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/MariaDelCarmenLuque/Ravn-Challenge-Backend-Maria_del_Carmen_Luque_Quispe.git"
+    },
+    "bugs": {
+        "url": "https://github.com/MariaDelCarmenLuque/Ravn-Challenge-Backend-Maria_del_Carmen_Luque_Quispe/issues"
+    },
+    "homepage": "https://github.com/MariaDelCarmenLuque/Ravn-Challenge-Backend-Maria_del_Carmen_Luque_Quispe#readme"
 }
